[package]
name    = "nphysics_testbed2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[lib]
name = "nphysics_testbed2d"

[dependencies.nphysics]
features = [ "2df32" ]
git = "https://github.com/sebcrozet/nphysics"

[dependencies]
sfml = "*"
nalgebra = "*"
time = "*"
num = "*"
rand = "*"
ncollide = "*"
piston_window = "*"
piston2d-gfx_graphics = "*"
gfx_device_gl = "*"
gfx = "*"
